# face-recognition-demo

./: .env.example  .gitignore  Makefile  README.MD  docker-compose.yml  index.html  main.py  pyproject.toml  requirements.txt  util.py
