[tool.poetry]
name = "face-detect"
version = "0.1.0"
description = ""
authors = ["Duc Hoang <duchoang206h@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
3to2 = "1.1.1"
absl-py = "2.0.0"
aiohttp = "3.8.5"
aiosignal = "1.3.1"
annotated-types = "0.6.0"
anyio = "3.7.1"
appdirs = "1.4.4"
applib = "1.2"
argon2-cffi = "23.1.0"
argon2-cffi-bindings = "21.2.0"
asgiref = "3.7.2"
astunparse = "1.6.3"
async-timeout = "4.0.3"
attrs = "23.1.0"
authlib = "1.2.1"
babel = "2.9.1"
beautifulsoup4 = "4.12.2"
blinker = "1.7.0"
cached-property = "1.5.2"
cachetools = "5.3.2"
certifi = "2023.7.22"
cffi = "1.15.1"
chardet = "4.0.0"
charset-normalizer = "3.3.0"
click = "8.1.7"
cmdln = "2.0.0"
codeintel = "2.0.0"
cryptography = "3.4.8"
cython = "3.0.6"
dataclasses-json = "0.6.2"
decorator = "4.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
